--- a/react-app/src/components/Matches.css
+++ b/react-app/src/components/Matches.css
@@ -2,9 +2,17 @@
     height: 200px;
     width: 200px;
     border: solid black 2px;
+
 }
 
 .matchImg{
     height: 50px;
     width: 50px;
+}
+
+
+.chatBox{
+    position: fixed;
+    right: 0;
+    bottom: 0;
 }
