--- a/react-app/src/components/Matches.css
+++ b/react-app/src/components/Matches.css
@@ -15,4 +15,8 @@
     position: fixed;
     right: 0;
     bottom: 0;
+    height: 400px;
+    width: 200px;
+    border: solid black 1px;
+    overflow-y: scroll;
 }
