--- a/react-app/src/components/Splash/Splash.css
+++ b/react-app/src/components/Splash/Splash.css
@@ -66,6 +66,7 @@
     width: 65%;
     font-size: 1.9rem;
     text-align: left;
+    align-items: left;
     font-weight: 900;
     letter-spacing: 1px;
     font-family: 'Libre Franklin', sans-serif;
@@ -87,4 +88,22 @@
     color: black;
     padding-left: 70px;
     /* border: 1px solid red; */
+  }
+
+  #splashSignup{
+    background-color: black;
+    border-radius: 3px;
+    border: 3px solid black;
+    color: white;
+    padding: 12px 16px;
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: bold;
+    transition: 0.3s;
+    display: inline-block;
+    text-decoration: none;
+    cursor: pointer;
+    width: 65%;
+    margin-top: 10%;
+    margin-bottom: 3%;
   }
