--- a/react-app/src/components/NavBar.css
+++ b/react-app/src/components/NavBar.css
@@ -1,21 +1,95 @@
-.navbarList {
-list-style-type: none;
-margin: 0;
-padding: 0;
-overflow: hidden;
-background-color: #333;
-}
+.navigation {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    background-color: #333;
+    height: 60px;
+    z-index: 99;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .navigation-top {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    position: fixed;
+    width: 65%;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #333;
+    height: 60px;
+    z-index: 100;
+  }
+  
+  .navigation-left {
+    left: 0;
+  }
 
+  .navigation-items {
+    display: flex;
+    flex-direction: row;
+    width: 85%;
+    margin-left: 10px;
+  }
 
+  #navLogo {
+    width: auto;
+    height: 70%;
+    background-color: transparent;
+    position: relative;
+    top: 10px;
+  }
 
-.navbarList > li a {
+  .fas{
+    margin-right: 2px;
+  }
+
+  .navitem{
     display: block;
     color: white;
     text-align: center;
-    padding: 14px 16px;
+    padding: 23px 20px 14.5px 20px; 
     text-decoration: none;
-}
+    font-size: 15px;
+    min-width: 120px;
+    letter-spacing: .7px;
+    font-family: 'Roboto', sans-serif;
+  }
 
-.navbarList > li a:hover {
-    background-color: #111;
-}
+  .navitem:hover{
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 23px 20px 14.5px 20px;
+    text-decoration: none;
+    font-size: 15px;
+    transition: .2s;
+    border-bottom: 5px solid #FF2C70;
+    background:rgb(20, 20, 20);
+  }
+
+  .navigation-right{
+    display: flex;
+    flex-direction: row;
+    width: 30%;
+    margin-right: 0px;
+  }
+
+  .nav-name{
+    display: block;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    min-width: 120px;
+    letter-spacing: .7px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+    padding: 8px;
+    margin-right: 2%;
+  }
+
+
