--- a/react-app/src/components/Splash/Splash.css
+++ b/react-app/src/components/Splash/Splash.css
@@ -111,6 +111,7 @@
 
   #splashSignup{
     background-color: black;
+    text-align: center;
     border-radius: 3px;
     border: 3px solid black;
     color: white;
