--- a/react-app/src/components/NavBar.css
+++ b/react-app/src/components/NavBar.css
@@ -73,20 +73,20 @@
 
   .navigation-right{
     display: flex;
+    justify-content: flex-end;
     flex-direction: row;
-    width: 30%;
-    margin-right: 0px;
+    width: 60%;
+    right: 0px;
+    flex-wrap: nowrap;
   }
 
   .nav-name{
     display: block;
     color: white;
-    text-align: center;
+    /* text-align: center; */
     text-decoration: none;
     font-size: 16px;
-    min-width: 120px;
     letter-spacing: .7px;
-    font-family: 'Roboto', sans-serif;
     font-weight: 500;
     padding: 8px;
     margin-right: 2%;
