--- a/react-app/src/components/Matches.css
+++ b/react-app/src/components/Matches.css
@@ -1,17 +1,19 @@
 
   .loader {
-    border: 16px solid #f3f3f3; /* Light grey */
-    border-top: 16px solid #3498db; /* Blue */
-    border-radius: 50%;
-    width: 120px;
-    height: 120px;
-    animation: spin 2s linear infinite;
+    /* border: 16px solid #f3f3f3; /* Light grey */
+    /* border-top: 16px solid #3498db; Blue */
+    /* border-radius: 50%; */
+    width: 450px;
+    height: 320px;
+    background-image: url("https://c.tenor.com/fSsxftCb8w0AAAAd/pikachu-running.gif");
+    /* background-size: contain; */
+    /* animation: spin 2s linear infinite; */
   }
 
-  @keyframes spin {
+  /* @keyframes spin {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
-  }
+  } */
 .loadHold{
     width: 100%;
     height: 100%;
