--- a/react-app/src/components/Matches.css
+++ b/react-app/src/components/Matches.css
@@ -23,13 +23,15 @@
 }
 
 .matchDiv{
+    box-sizing: border-box;
     height: 120px;
     width: 580px;
     background-color: #fff;
     box-shadow: 0 1px 0 0 #ebedf2, 0 -1px 0 0 #ebedf2;
     padding: 17px 20px;
     margin-bottom: 10px;
-
+    display: flex;
+    /* justify-content: space-between; */
 }
 .matchDiv:hover{
     cursor: pointer;
@@ -83,4 +85,8 @@
 
 .matches-main{
     background-color: #f0f2f6;
+}
+
+.matchName {
+    margin-left: 24px;
 }
