--- a/react-app/src/context/ChatModal.css
+++ b/react-app/src/context/ChatModal.css
@@ -18,7 +18,7 @@ body{
     right: 0;
     left: 0;
     bottom: 0;
-    background-color: rgba(0, 0, 0, .5);
+    background-color: transparent;
   }
   
   #modal-content {
