--- a/react-app/src/components/Matches.css
+++ b/react-app/src/components/Matches.css
@@ -42,3 +42,17 @@
     border: solid black 1px;
     overflow-y: scroll;
 }
+
+.chat-loading {
+    border: 16px solid #f3f3f3; /* Light grey */
+    border-top: 16px solid rgb(255, 174, 176); /* Blue */
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+  }
+
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
