--- a/react-app/src/components/Messages/Messages.css
+++ b/react-app/src/components/Messages/Messages.css
@@ -25,6 +25,36 @@
     border: 1px solid green;
 }
 
+.chat-message-ctrl{
+    display: flex;
+    flex-direction: row;
+}
+
+.chat-user-wrap{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 3%;
+}
+
+.chat-username{
+    padding: 2%;
+}
+
+.chat-content-options{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.edit-msg,.delete-msg{
+    width: 22px;
+    height: 22px;
+    margin: 2px;
+    font-size: 12px;
+    text-align: center;
+}
+
 .chat-input-ctrl{
     margin-top: 2%;
     display: flex;
@@ -41,7 +71,7 @@
     font-size: 11px;
 }
 
-.chat-input{
+.chat-input,.chat-div-input{
     border-radius: 20px;
     width: 75%;
     height: 50%;
