--- a/react-app/src/components/Questionnaire.css
+++ b/react-app/src/components/Questionnaire.css
@@ -1,40 +1,51 @@
 .questions-form {
     background-color: #ffffff;
-    width: 100vw;
-    height: 100vh;
-    padding: 20px;
-    box-shadow: 10px 10px 42px 0px rgba(0, 0, 0, 0.75);
+    width: 101vw;
+    height: 98vh;
+    overflow: hidden;
+    margin-left: -8px;
+    margin-top: -8px;
     display: flex;
+    align-items: center;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: center;
 }
 
 .question-section {
-    width: 100%;
-    position: relative;
+    width: 101vw;
+    position: absolute;
+    top: 0;
     margin-bottom: 100px;
     text-align: center;
-    background-color: black;
+    background-color: rgb(29, 29, 29);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .question-number {
-    margin-bottom: 20px;
+    margin-top: 20px;
+    width: 100%;
+    margin-bottom: 70px;
     color: white;
 }
 
-.question-title {
-    margin-bottom: 12px;
-    color: white
+.question-title-a {
+    margin-left: 0%;
+    margin-bottom: 30px;
+    min-width: 100%;
+    color: white;
+    font-size: 35px;
 }
 
 .answer-section {
     width: 100%;
     max-width: calc(480px + 4vw * 2);
     max-height: 100%;
-    padding: 16px 4vw 4px;
-    overflow: scroll;
+    padding: 16px 4px;
     position: relative;
     min-height: 288px;
+    margin-top: -40px;
     background-color: white;
 }
 
@@ -47,7 +58,7 @@
     padding: 20px;
     padding-left: 33px;
     font-weight: bold;
-    border: 5px solid #fda137;
+    border: 3px solid #ff2c70;
     margin: 10px;
     position: relative;
     text-align: left;
@@ -59,9 +70,10 @@
 }
 
 #question-button:hover {
-    background-color: #555e7d;
+    background-color: #b6c0e0;
 }
 
 #question-button:focus {
     outline: none;
 }
+
