--- a/react-app/src/components/Splash/Splash.css
+++ b/react-app/src/components/Splash/Splash.css
@@ -4,8 +4,8 @@
     border: 0px;
     font-family: sans-serif;
     text-align: center;
-    width: 100vw;
-    height: 100vh;
+    width: 100.5vw;
+    height: 101.1vh;
     animation: morph 25s infinite;
   }
   
@@ -90,7 +90,9 @@
     letter-spacing: 1px;
     font-family: 'Libre Franklin', sans-serif;
     color: white;
+    padding-top: 50px;
     padding-left: 70px;
+    padding-bottom: 50px;
     text-shadow: -1px 1px #000, -2px 2px #000, -3px 3px #000, -4px 4px #000, -5px 5px #000, -6px 6px #000, -7px 7px #000, -8px 8px #000;
     -webkit-text-stroke: 3px black;
     /* border: 1px solid red; */
