style profile buttons

--- a/react-app/src/components/Profile.css
+++ b/react-app/src/components/Profile.css
@@ -461,3 +461,38 @@ table {
     border-radius: 4px;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
+
+
+input[type=file]::file-selector-button {
+    background-color:  #128fdc ;
+    color: #fff;
+    padding-bottom: 0.5rem;
+    padding-top: 0.5rem;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+    width: 150px;   /*will fill up div when created */
+    cursor: pointer;
+    border-style: none;
+    border-radius: 0.20rem;
+    transition: background-color .2s;
+
+    font-weight: bold;
+    margin-left: 5px;
+}
+
+
+#upload-button{
+    background-color:  #128fdc ;
+    color: #fff;
+    padding-bottom: 0.5rem;
+    padding-top: 0.5rem;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+    width: 150px;   /*will fill up div when created */
+    cursor: pointer;
+    border-style: none;
+    border-radius: 0.20rem;
+    transition: background-color .2s;
+
+    font-weight: bold
+}
