--- a/react-app/src/components/Profile.css
+++ b/react-app/src/components/Profile.css
@@ -10,7 +10,8 @@
 .profileMain {
     position: relative;
     /* padding-top: 2.5%; */
-    background-color: #f0f2f6
+    background-color: #f0f2f6;
+    width: 100%;
 }
 
 .profile-nameplate{
