--- a/react-app/src/components/Messages/Messages.css
+++ b/react-app/src/components/Messages/Messages.css
@@ -111,3 +111,20 @@
 .chat-submit:disabled{
     color: grey;
 }
+
+
+.chat-head {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding: 5px 5px;
+}
+
+
+.chat-images{
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+}
