--- a/react-app/src/components/Profile.css
+++ b/react-app/src/components/Profile.css
@@ -95,11 +95,13 @@
 .answer-submit {
     color: green;
     border: transparent;
+    cursor:pointer;
 }
 
 .answer-cancel {
     color: red;
     border: transparent;
+    cursor:pointer;
 }
 
 .profile-question {
@@ -141,7 +143,8 @@
 .edit-answers {
     /* border: 1px solid #ccc;
     background-color: white; */
-    border: transparent
+    border: transparent;
+    cursor:pointer;
 }
 
 .pokemon-title {
@@ -192,6 +195,7 @@ font-size: 20px;
 background-color: #34f;
 border: transparent;
 color: whitesmoke;
+cursor:pointer;
 transition: .3s background-color
 }
 
@@ -206,6 +210,7 @@ font-size: 20px;
 background-color: #34f;
 border: transparent;
 color: whitesmoke;
+cursor:pointer;
 transition: .3s background-color
 }
 
@@ -220,7 +225,8 @@ padding-right: 5%;
 
 }
 
-.edit-pokemon:hover {
+.edit-pokemon:hover,
+.edit-bio:hover {
 
 background-color: rgb(0, 21, 255);
 
@@ -241,6 +247,7 @@ list-style: none;
     border: none;
     font-size: 21px;
     color: red;
+    cursor:pointer;
     }
 
 
@@ -252,6 +259,7 @@ list-style: none;
     right: 6.3%;
     background-color: transparent;
     border: none;
+    cursor:pointer;
     }
 
 .edit-bio-cancel {
@@ -262,6 +270,7 @@ list-style: none;
         color: red;
         left: 45%;
         bottom: 5%;
+        cursor:pointer;
         }
 
 
@@ -273,6 +282,7 @@ list-style: none;
         bottom: 4%;
         background-color: transparent;
         border: none;
+        cursor:pointer;
         }
 
 .profile-pictures-title-container {
@@ -366,12 +376,6 @@ list-style: none;
     border: 1px solid #ccc;
 }
 
-.edit-title-container {
-    /* position: relative;
-    left: 26%;
-    bottom: 28px; */
-}
-
 .profile-images-container {
     border: 1px solid #ccc;
     margin-top: 3%;
@@ -419,6 +423,7 @@ width: 1.1vw;
 height: 2vh;
 font-size: 10px;
 background-color: #34f;
+cursor:pointer;
 border: transparent;
 color: whitesmoke;
 transition: .3s background-color
@@ -439,7 +444,8 @@ transition: .3s background-color
     background-color: transparent;
     border: transparent;
     color: red;
-    transition: .3s background-color
+    transition: .3s background-color;
+    cursor:pointer;
 }
 
 .gender-button-submit {
@@ -452,6 +458,7 @@ transition: .3s background-color
     background-color: transparent;
     border: transparent;
     color: green;
+    cursor:pointer;
     transition: .3s background-color
 }
 
