--- a/react-app/src/components/auth/Signup.css
+++ b/react-app/src/components/auth/Signup.css
@@ -1,4 +1,4 @@
-.questions-form {
+.signup-form {
     background-color: #ffffff;
     width: 101vw;
     height: 98vh;
@@ -8,11 +8,11 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    z-index: 2;
 }
 
-.question-section {
+.signup-header{
     width: 101vw;
+    height: 21.5vh;
     margin-bottom: 100px;
     text-align: center;
     background-color: rgb(29, 29, 29);
@@ -20,22 +20,33 @@
     flex-direction: column;
     justify-content: center;
     font-size: 16px;
+    z-index: 0;
+    position: absolute;
 }
 
-.question-number {
-    margin-top: 20px;
-    width: 100%;
-    margin-bottom: 70px;
-    color: white;
-}
-
-.question-title-a {
+.signup-header-text {
     margin-left: 0%;
     margin-bottom: 30px;
     min-width: 100%;
     color: white;
     font-size: 26px;
 }
+
+.signup-form-primary {
+    margin-top: 30vh;
+    display: flex;
+    flex-direction: column;
+}
+
+.signup-name,.signup-email,.password,.repeat_password,.birthday{
+    width: 100%;
+    height: 40px;
+    margin-bottom: 6%;
+    border-radius: 10px;
+    padding-left: 5px;
+    border: solid grey .5px;
+    font-size: 20px;
+  }
 
 .answer-section {
     width: 100%;
