--- a/react-app/src/components/Matches.css
+++ b/react-app/src/components/Matches.css
@@ -27,7 +27,7 @@
     background-color: #f0f2f6;
     min-width: 100%;
     overflow-x: hidden;
-    height: 100%;
+    height: 100vh;
     margin-left: -8px;
     margin-bottom: -8px;
 }
