--- a/react-app/src/components/Profile.css
+++ b/react-app/src/components/Profile.css
@@ -170,25 +170,26 @@
     margin: 0;
 }
 
+.profile-pokemon{
+    display: flex;
+    width:50%;
+    height: 100%;
+}
+
 .pokemon-img {
-    width: fit-content;
+    height: 100%;
     object-fit: cover;
-    position: relative;
     left: 2%;
 }
 
 .pokemon-number {
     font-weight: bolder;
     font-size: 30px;
-    position: absolute;
+    /* position: absolute; */
     left: 50%;
     height: 25vh;
     border-left: 1px solid #ccc;
     padding-left: 3%;
-}
-
-.current-bio {
-    width: 23vw;
 }
 
 .edit-pokemon {
@@ -316,7 +317,7 @@ list-style: none;
 
 .bio-and-pokemon {
     display: inline-flex;
-    width: 47.4vw;
+    width: 100%;
     height: 25vh;
     border-bottom-right-radius: 4px;
     border-bottom-left-radius: 4px;
@@ -332,14 +333,15 @@ list-style: none;
     font-family: 'Roboto', sans-serif;
     font-weight: bold;
     font-size: large;
-    width: 70%;
+    width: 100%;
     position: relative;
-    left: 12%;
+    left: 2%;
     padding-top: 5%;
 }
 
 .current-bio-div {
     width: 50%;
+    border: 1px solid blue;
 }
 
 .upload-text {
@@ -363,12 +365,12 @@ list-style: none;
     padding: 2%;
 }
 
-.profile-pictures-title {
+.profile-picture-title {
     font-family: 'Roboto', sans-serif;
     font-weight: bolder;
     font-size: large;
     text-shadow: .8px 0 black;
-    width: 95%;
+    width: 100%;
     margin-bottom: 3%;
 }
 
