--- a/react-app/src/components/Profile.css
+++ b/react-app/src/components/Profile.css
@@ -62,6 +62,7 @@
 }
 
 .biography-title {
+    font-family: 'Roboto', sans-serif;
     background-color: #1a1a1a;
     color: white;
     padding: 1.2%;
@@ -74,6 +75,7 @@
 }
 
 .question-title {
+    font-family: 'Roboto', sans-serif;
     background-color: #1a1a1a;
     color: white;
     padding: 1.2%;
@@ -87,6 +89,7 @@
 }
 
 .answer-title {
+    font-family: 'Roboto', sans-serif;
     background-color: #1a1a1a;
     color: white;
     padding: 1.2%;
@@ -134,6 +137,7 @@
 }
 
 .profile-picture-title {
+    font-family: 'Roboto', sans-serif;
     background-color: #1a1a1a;
     color: white;
     padding: 1.2%;
@@ -155,6 +159,7 @@
 }
 
 .pokemon-title {
+    font-family: 'Roboto', sans-serif;
     background-color: #1a1a1a;
     color: white;
     padding: 1.2%;
@@ -171,6 +176,7 @@
 }
 
 .profile-pokemon{
+    position: relative;
     display: flex;
     width:50%;
     height: 100%;
@@ -192,52 +198,29 @@
     padding-left: 3%;
 }
 
-.edit-pokemon {
-position: absolute;
-bottom: 5%;
-right: 4%;
-border-radius: 50%;
-width: 2vw;
-height: 4vh;
-font-size: 20px;
-background-color: #34f;
-border: transparent;
-color: whitesmoke;
-cursor:pointer;
-transition: .3s background-color
-}
-
-.edit-bio {
-position: absolute;
-bottom: 5%;
-left: 43%;
-border-radius: 50%;
-width: 2vw;
-height: 4vh;
-font-size: 20px;
-background-color: #34f;
-border: transparent;
-color: whitesmoke;
-cursor:pointer;
-transition: .3s background-color
+.edit-bio,.edit-pokemon {
+    position: absolute;
+    bottom: 0;
+    right: 5%;
 }
 
 .edit-bio-textarea{
-width: 20vw;
-resize: none;
-height: 20vh;
-position: relative;
-left: 5%;
-top: 5%;
-padding-right: 5%;
-
+    width: 20vw;
+    resize: none;
+    height: 20vh;
+    position: relative;
+    left: 5%;
+    top: 5%;
+    padding-right: 5%;
 }
 
+.gender-button:hover,
 .edit-pokemon:hover,
 .edit-bio:hover {
-
-background-color: rgb(0, 21, 255);
-
+    background-color: #34f;
+    cursor: pointer;
+    opacity: 100%;
+    transition: .2s;
 }
 
 .edit-pokemon-select {
@@ -341,7 +324,8 @@ list-style: none;
 
 .current-bio-div {
     width: 50%;
-    border: 1px solid blue;
+    position: relative;
+    /* border: 1px solid blue; */
 }
 
 .upload-text {
@@ -425,8 +409,7 @@ list-style: none;
     align-items: center;
 }
 
-.gender-button {
-
+.gender-button,.edit-bio,.edit-pokemon {
     border-radius: 50%;
     width: 20px;
     height: 20px;
@@ -434,6 +417,7 @@ list-style: none;
     background-color: #34f;
     border: transparent;
     color: whitesmoke;
+    opacity: 50%;
     transition: .3s background-color
 }
 
