--- a/react-app/src/components/Profile.css
+++ b/react-app/src/components/Profile.css
@@ -9,10 +9,11 @@
 
 .profileMain {
     position: relative;
-    /* padding-top: 2.5%; */
     background-color: #f0f2f6;
+    top: 0;
     width: 100%;
     height: 100%;
+    margin-bottom: -20px;
 }
 
 .profile-nameplate{
@@ -141,7 +142,7 @@
     background-color: #1a1a1a;
     color: white;
     padding: 1.2%;
-    width: 97.6%;
+    width: 100%;
     text-transform: uppercase;
     text-indent: 1.5%;
     font-weight: bolder;
@@ -193,7 +194,7 @@
     font-size: 30px;
     /* position: absolute; */
     left: 50%;
-    height: 25vh;
+    height: 100%;
     border-left: 1px solid #ccc;
     padding-left: 3%;
 }
@@ -289,7 +290,7 @@ list-style: none;
     width: 50%;
     position: relative;
     left: 25%;
-    margin-top: 5%;
+    margin-top: 3%;
 }
 .titles-container{
     width: 100%;
@@ -331,7 +332,7 @@ list-style: none;
 .upload-text {
     font-family: 'Roboto', sans-serif;
     font-weight: bold;
-    font-size: large;
+    font-size: 15px;
     width: 70%;
     position: relative;
 }
@@ -345,7 +346,7 @@ list-style: none;
 }
 
 .profile-pictures-div {
-    width: 80%;
+    width: 100%;
     padding: 2%;
 }
 
@@ -370,6 +371,10 @@ list-style: none;
     border: 1px solid #ccc;
 }
 
+.profile-bottom{
+    padding-bottom: 5%;
+}
+
 .profile-images-container {
     border: 1px solid #ccc;
     margin-top: 3%;
@@ -377,7 +382,7 @@ list-style: none;
     border-radius: 4px;
     margin-bottom: 3%;
     background-color: white;
-    overflow-x: scroll;
+    /* overflow-x: scroll; */
 }
 
 .profile-picture-delete {
@@ -388,9 +393,8 @@ list-style: none;
 .upload-container {
     text-align: right;
     position: relative;
-    right: 10%;
-    padding-top: 1%;
-    padding-bottom: 3%;
+    right: 2%;
+    padding-bottom: 2%;
 }
 
 .images-errors {
@@ -399,8 +403,13 @@ list-style: none;
     font-weight: bold;
     font-family: 'Roboto', sans-serif;
     position: relative;
-    left: 5%;
-    top: 25px;
+    left: 2%;
+    top: 22px;
+}
+
+.uploading-image-text{
+    position: absolute;
+    margin-bottom: 100%;
 }
 
 .gender-container {
@@ -480,13 +489,13 @@ input[type=file]::file-selector-button {
 
 
 #upload-button{
-    background-color:  #128fdc ;
+    background-color:  #128fdc;
     color: #fff;
+    width: 30px;
+    height: 30px;
     padding-bottom: 0.5rem;
     padding-top: 0.5rem;
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
-    width: 150px;   /*will fill up div when created */
+    /*width: 150px;   will fill up div when created */
     cursor: pointer;
     border-style: none;
     border-radius: 0.20rem;
