--- a/react-app/src/components/Splash/Splash.css
+++ b/react-app/src/components/Splash/Splash.css
@@ -1,15 +1,11 @@
 
 .splashPage {
-
-    margin: 0px;
-
+    margin-top: -50px;
     border: 0px;
     font-family: sans-serif;
     text-align: center;
-
     width: 100%;
     height: 100vh;
-
     animation: morph 25s infinite;
   }
 
@@ -85,6 +81,10 @@
     margin-bottom: 3%;
   }
 
+  .splash-content{
+    position: relative;
+  }
+
   .splashText{
     width: 65%;
     font-size: 1.9rem;
@@ -133,3 +133,24 @@
     margin-top: 10%;
     margin-bottom: 3%;
   }
+
+  #splash-slides > * {
+    animation: 25s autoplay5 infinite linear;
+    position: absolute; 
+    top: 10%;
+    left: 46%;
+    opacity: 0.0}
+
+  @keyframes autoplay5 {
+    0% {opacity: 0.0}
+    3% {opacity: 1.0}
+    17% {opacity: 1.0}
+    20% {opacity: 0.0}
+    100% {opacity: 0.0}
+  }
+
+  #splash-slides > *:nth-child(1) {animation-delay: 0s}
+  #splash-slides > *:nth-child(2) {animation-delay: 5s}
+  #splash-slides > *:nth-child(3) {animation-delay: 10s}
+  #splash-slides > *:nth-child(4) {animation-delay: 15s}
+  #splash-slides > *:nth-child(5) {animation-delay: 20s}
