--- a/react-app/src/components/Profile.css
+++ b/react-app/src/components/Profile.css
@@ -426,14 +426,14 @@ list-style: none;
     background-color: #34f;
     border: transparent;
     color: whitesmoke;
-    opacity: 80%;
+    /* opacity: 80%; */
     transition: .3s background-color
 }
 
-.gender-button:hover{
+/* .gender-button:hover{
     cursor: pointer;
 
-}
+} */
 
 .gender-text {
     color: white;
