--- a/react-app/src/components/Profile.css
+++ b/react-app/src/components/Profile.css
@@ -1,508 +1,505 @@
 .profile-picture {
-    border-radius: 50%;
-    object-fit: cover;
-    width: 150px;
-    height: 150px;
-    position: relative;
-    left: 30%;
+  border-radius: 50%;
+  object-fit: cover;
+  width: 150px;
+  height: 150px;
+  position: relative;
+  left: 30%;
 }
 
 .profileMain {
-    position: relative;
-    background-color: #f0f2f6;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    margin-bottom: -20px;
+  position: relative;
+  background-color: #f0f2f6;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  margin-bottom: -20px;
 }
 
-.profile-nameplate{
-    background-color: #1a1a1a;
-    width: 100%;
-    padding-top: 60px;
-    transition: .1s background-color
+.profile-nameplate {
+  background-color: #1a1a1a;
+  width: 100%;
+  padding-top: 60px;
+  transition: 0.1s background-color;
 }
 
 .profile-nameplate:hover {
-    background-color:rgb(20, 20, 20);
+  background-color: rgb(20, 20, 20);
 }
 
-.profile-items{
-    display: flex;
-    align-items: center;
-    flex-direction: row;
+.profile-items {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
 }
 
 .profile-name-gender {
-    margin-left: 32%;
+  margin-left: 32%;
 }
 
 .profile-name {
-    color: white;
-    letter-spacing: 1.5px;
-    font-family: 'Roboto', sans-serif;
-    font-size: 35px;
-    font-weight: bolder;
-    margin-bottom: 5px;
+  color: white;
+  letter-spacing: 1.5px;
+  font-family: "Roboto", sans-serif;
+  font-size: 35px;
+  font-weight: bolder;
+  margin-bottom: 5px;
 }
 
 .profile-title {
-    color: white;
-    background-color: #333;
-    letter-spacing: 1.5px;
-    font-family: 'Roboto', sans-serif;
-    font-size: 25px;
-    font-weight: 900;
-    position: relative;
-    width: 100%;
-    border: 1px solid #666;
-    text-align: center;
-    margin-top: 2.5%;
-    padding: .5%;
-
+  color: white;
+  background-color: #333;
+  letter-spacing: 1.5px;
+  font-family: "Roboto", sans-serif;
+  font-size: 25px;
+  font-weight: 900;
+  position: relative;
+  width: 100%;
+  border: 1px solid #666;
+  text-align: center;
+  margin-top: 2.5%;
+  padding: 0.5%;
 }
 
 .biography-title {
-    font-family: 'Roboto', sans-serif;
-    background-color: #1a1a1a;
-    color: white;
-    padding: 1.2%;
-    width: 100%;
-    text-transform: uppercase;
-    text-indent: 3%;
-    font-weight: bolder;
-    font-size: 15px;
-    border-top-left-radius: 4px;
+  font-family: "Roboto", sans-serif;
+  background-color: #1a1a1a;
+  color: white;
+  padding: 1.2%;
+  width: 100%;
+  text-transform: uppercase;
+  text-indent: 3%;
+  font-weight: bolder;
+  font-size: 15px;
+  border-top-left-radius: 4px;
 }
 
 .question-title {
-    font-family: 'Roboto', sans-serif;
-    background-color: #1a1a1a;
-    color: white;
-    padding: 1.2%;
-    width: 18vw;
-    text-transform: uppercase;
-    text-indent: 3%;
-    font-weight: bolder;
-    font-size: 15px;
-    border-top-left-radius: 4px;
-    text-align: left;
+  font-family: "Roboto", sans-serif;
+  background-color: #1a1a1a;
+  color: white;
+  padding: 1.2%;
+  width: 18vw;
+  text-transform: uppercase;
+  text-indent: 3%;
+  font-weight: bolder;
+  font-size: 15px;
+  border-top-left-radius: 4px;
+  text-align: left;
 }
 
 .answer-title {
-    font-family: 'Roboto', sans-serif;
-    background-color: #1a1a1a;
-    color: white;
-    padding: 1.2%;
-    width: 30vw;
-    text-transform: uppercase;
-    text-indent: 3%;
-    font-weight: bolder;
-    font-size: 15px;
-    border-top-right-radius: 4px;
-    text-align: left;
+  font-family: "Roboto", sans-serif;
+  background-color: #1a1a1a;
+  color: white;
+  padding: 1.2%;
+  width: 30vw;
+  text-transform: uppercase;
+  text-indent: 3%;
+  font-weight: bolder;
+  font-size: 15px;
+  border-top-right-radius: 4px;
+  text-align: left;
 }
 
 .answer-submit {
-    color: green;
-    border: transparent;
-    cursor:pointer;
+  color: green;
+  border: transparent;
+  cursor: pointer;
 }
 
 .answer-cancel {
-    color: red;
-    border: transparent;
-    cursor:pointer;
+  color: red;
+  border: transparent;
+  cursor: pointer;
 }
 
 .profile-question {
-    font-family: 'Roboto', sans-serif;
-    font-weight: bolder;
-    font-size: 20px;
-    text-shadow: .8px 0 black;
-    background-color: white;
-    padding: 2%;
-
+  font-family: "Roboto", sans-serif;
+  font-weight: bolder;
+  font-size: 20px;
+  text-shadow: 0.8px 0 black;
+  background-color: white;
+  padding: 2%;
 }
 
 .profile-answers {
-    font-family: 'Roboto', sans-serif;
-    font-weight: bolder;
-    font-size: 15px;
-    background-color: white;
-    text-indent: 10px;
-    /* text-align: center; */
-    margin-left: 1%;
-    text-transform: uppercase;
-    /* text-shadow: .5px 0 black; */
+  font-family: "Roboto", sans-serif;
+  font-weight: bolder;
+  font-size: 15px;
+  background-color: white;
+  text-indent: 10px;
+  /* text-align: center; */
+  margin-left: 1%;
+  text-transform: uppercase;
+  /* text-shadow: .5px 0 black; */
 }
 
 .profile-picture-title {
-    font-family: 'Roboto', sans-serif;
-    background-color: #1a1a1a;
-    color: white;
-    padding: 1.2%;
-    width: 100%;
-    text-transform: uppercase;
-    text-indent: 1.5%;
-    font-weight: bolder;
-    font-size: 15px;
-    border-top-left-radius: 4px;
-    border-top-right-radius: 4px;
-    margin-bottom: 2%;
+  font-family: "Roboto", sans-serif;
+  background-color: #1a1a1a;
+  color: white;
+  padding: 1.2%;
+  width: 100%;
+  text-transform: uppercase;
+  text-indent: 1.5%;
+  font-weight: bolder;
+  font-size: 15px;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+  margin-bottom: 2%;
 }
 
 .edit-answers {
-    /* border: 1px solid #ccc;
+  /* border: 1px solid #ccc;
     background-color: white; */
-    border: transparent;
-    cursor:pointer;
+  border: transparent;
+  cursor: pointer;
 }
 
 .pokemon-title {
-    font-family: 'Roboto', sans-serif;
-    background-color: #1a1a1a;
-    color: white;
-    padding: 1.2%;
-    width: 100%;
-    text-transform: uppercase;
-    text-indent: 3%;
-    font-weight: bolder;
-    font-size: 15px;
-    border-top-right-radius: 4px;
+  font-family: "Roboto", sans-serif;
+  background-color: #1a1a1a;
+  color: white;
+  padding: 1.2%;
+  width: 100%;
+  text-transform: uppercase;
+  text-indent: 3%;
+  font-weight: bolder;
+  font-size: 15px;
+  border-top-right-radius: 4px;
 }
 
 * {
-    margin: 0;
+  margin: 0;
 }
 
-.profile-pokemon{
-    position: relative;
-    display: flex;
-    width:50%;
-    height: 100%;
+.profile-pokemon {
+  position: relative;
+  display: flex;
+  width: 50%;
+  height: 100%;
 }
 
 .pokemon-img {
-    height: 100%;
-    object-fit: cover;
-    left: 2%;
+  height: 100%;
+  object-fit: cover;
+  left: 2%;
 }
 
 .pokemon-number {
-    font-weight: bolder;
-    font-size: 30px;
-    /* position: absolute; */
-    left: 50%;
-    height: 100%;
-    border-left: 1px solid #ccc;
-    padding-left: 3%;
+  font-weight: bolder;
+  font-size: 30px;
+  /* position: absolute; */
+  left: 50%;
+  height: 100%;
+  border-left: 1px solid #ccc;
+  padding-left: 3%;
 }
 
-.edit-bio,.edit-pokemon {
-    position: absolute;
-    bottom: 0;
-    right: 5%;
+.edit-bio,
+.edit-pokemon {
+  position: absolute;
+  bottom: 0;
+  right: 5%;
 }
 
-.edit-bio-textarea{
-    width: 20vw;
-    resize: none;
-    height: 20vh;
-    position: relative;
-    left: 5%;
-    top: 5%;
-    padding-right: 5%;
+.edit-bio-textarea {
+  width: 20vw;
+  resize: none;
+  height: 20vh;
+  position: relative;
+  left: 5%;
+  top: 5%;
+  padding-right: 5%;
 }
 
 .gender-button:hover,
 .edit-pokemon:hover,
 .edit-bio:hover {
-    background-color: #34f;
-    cursor: pointer;
-    opacity: 100%;
-    transition: .2s;
+  background-color: #34f;
+  cursor: pointer;
+  opacity: 100%;
+  transition: 0.2s;
 }
 
 .edit-pokemon-select {
-position: absolute;
-bottom: 17%;
-right: 1%;
-list-style: none;
+  position: absolute;
+  bottom: 17%;
+  right: 1%;
+  list-style: none;
 }
 
 .edit-pokemon-cancel {
-    position: absolute;
-    bottom: 6%;
-    right: 3%;
-    background-color: transparent;
-    border: none;
-    font-size: 21px;
-    color: red;
-    cursor:pointer;
-    }
-
+  position: absolute;
+  bottom: 6%;
+  right: 3%;
+  background-color: transparent;
+  border: none;
+  font-size: 21px;
+  color: red;
+  cursor: pointer;
+}
 
 .edit-pokemon-save {
-    position: absolute;
-    font-size: 25px;
-    color: green;
-    bottom: 5%;
-    right: 6.3%;
-    background-color: transparent;
-    border: none;
-    cursor:pointer;
-    }
+  position: absolute;
+  font-size: 25px;
+  color: green;
+  bottom: 5%;
+  right: 6.3%;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
 
 .edit-bio-cancel {
-        position: absolute;
-        background-color: transparent;
-        border: none;
-        font-size: 21px;
-        color: red;
-        left: 45%;
-        bottom: 5%;
-        cursor:pointer;
-        }
-
+  position: absolute;
+  background-color: transparent;
+  border: none;
+  font-size: 21px;
+  color: red;
+  left: 45%;
+  bottom: 5%;
+  cursor: pointer;
+}
 
 .edit-bio-save {
-        position: absolute;
-        font-size: 26px;
-        color: green;
-        left: 41%;
-        bottom: 4%;
-        background-color: transparent;
-        border: none;
-        cursor:pointer;
-        }
+  position: absolute;
+  font-size: 26px;
+  color: green;
+  left: 41%;
+  bottom: 4%;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
 
 .profile-pictures-title-container {
-    display: inline-flex;
+  display: inline-flex;
 }
 
 .edit-photo {
-    border: none;
-    background-color: transparent;
+  border: none;
+  background-color: transparent;
 }
 
 .profile-info-container {
-    width: 50%;
-    position: relative;
-    left: 25%;
-    margin-top: 3%;
+  width: 50%;
+  position: relative;
+  left: 25%;
+  margin-top: 3%;
 }
-.titles-container{
-    width: 100%;
-    position: relative;
-    margin-top: 5%;
-    display: inline-flex;
+.titles-container {
+  width: 100%;
+  position: relative;
+  margin-top: 5%;
+  display: inline-flex;
 }
 
 .bio-and-pokemon {
-    display: inline-flex;
-    width: 100%;
-    height: 25vh;
-    border-bottom-right-radius: 4px;
-    border-bottom-left-radius: 4px;
-    border: 1px solid rgba(100, 100, 111, 0.2);
-    position: relative;
-    justify-content: space-between;
-    padding: 2%;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-    background-color: white;
+  display: inline-flex;
+  width: 100%;
+  height: 25vh;
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
+  border: 1px solid rgba(100, 100, 111, 0.2);
+  position: relative;
+  justify-content: space-between;
+  padding: 2%;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  background-color: white;
 }
 
 .current-bio {
-    font-family: 'Roboto', sans-serif;
-    font-weight: bold;
-    font-size: large;
-    width: 100%;
-    position: relative;
-    left: 2%;
-    padding-top: 5%;
+  font-family: "Roboto", sans-serif;
+  font-weight: bold;
+  font-size: large;
+  width: 100%;
+  position: relative;
+  left: 2%;
+  padding-top: 5%;
 }
 
 .current-bio-div {
-    width: 50%;
-    position: relative;
-    /* border: 1px solid blue; */
+  width: 50%;
+  position: relative;
+  /* border: 1px solid blue; */
 }
 
 .upload-text {
-    font-family: 'Roboto', sans-serif;
-    font-weight: bold;
-    font-size: 15px;
-    width: 70%;
-    position: relative;
+  font-family: "Roboto", sans-serif;
+  font-weight: bold;
+  font-size: 15px;
+  width: 70%;
+  position: relative;
 }
 
 .profile-pictures {
-    width: 14vw;
-    height: 30vh;
-    object-fit: cover;
-    border: solid 1px #ccc;
-    /* margin-top: 3%; */
+  width: 14vw;
+  height: 30vh;
+  object-fit: cover;
+  border: solid 1px #ccc;
+  /* margin-top: 3%; */
 }
 
 .profile-pictures-div {
-    width: 100%;
-    padding: 2%;
+  width: 100%;
+  padding: 2%;
 }
 
 .profile-picture-title {
-    font-family: 'Roboto', sans-serif;
-    font-weight: bolder;
-    font-size: large;
-    text-shadow: .8px 0 black;
-    width: 100%;
-    margin-bottom: 3%;
+  font-family: "Roboto", sans-serif;
+  font-weight: bolder;
+  font-size: large;
+  text-shadow: 0.8px 0 black;
+  width: 100%;
+  margin-bottom: 3%;
 }
 
-.profile-images{
-    display: inline-flex;
-    width: 100%;
+.profile-images {
+  display: inline-flex;
+  width: 100%;
 }
 
 .image-title-textarea {
-    width: 12.8vw;
-    resize: none;
-    height: 2vh;
-    border: 1px solid #ccc;
+  width: 12.8vw;
+  resize: none;
+  height: 2vh;
+  border: 1px solid #ccc;
 }
 
-.profile-bottom{
-    padding-bottom: 5%;
+.profile-bottom {
+  padding-bottom: 5%;
 }
 
 .profile-images-container {
-    border: 1px solid #ccc;
-    margin-top: 3%;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-    border-radius: 4px;
-    margin-bottom: 3%;
-    background-color: white;
-    /* overflow-x: scroll; */
+  border: 1px solid #ccc;
+  margin-top: 3%;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  border-radius: 4px;
+  margin-bottom: 3%;
+  background-color: white;
+  /* overflow-x: scroll; */
 }
 
 .profile-picture-delete {
-    border: none;
-    background: transparent;
+  border: none;
+  background: transparent;
 }
 
 .upload-container {
-    text-align: right;
-    position: relative;
-    right: 2%;
-    padding-bottom: 2%;
+  text-align: right;
+  position: relative;
+  right: 2%;
+  padding-bottom: 2%;
 }
 
 .images-errors {
-    color: red;
-    font-size: small;
-    font-weight: bold;
-    font-family: 'Roboto', sans-serif;
-    position: relative;
-    left: 2%;
-    top: 22px;
+  color: red;
+  font-size: small;
+  font-weight: bold;
+  font-family: "Roboto", sans-serif;
+  position: relative;
+  left: 2%;
+  top: 22px;
 }
 
-.uploading-image-text{
-    position: absolute;
-    margin-bottom: 100%;
+.uploading-image-text {
+  position: absolute;
+  margin-bottom: 100%;
 }
 
 .gender-container {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
-.gender-button,.edit-bio,.edit-pokemon {
-    border-radius: 50%;
-    width: 20px;
-    height: 20px;
-    font-size: 10px;
-    background-color: #34f;
-    border: transparent;
-    color: whitesmoke;
-    opacity: 50%;
-    transition: .3s background-color
+.gender-button,
+.edit-bio,
+.edit-pokemon {
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  font-size: 10px;
+  background-color: #34f;
+  border: transparent;
+  color: whitesmoke;
+  opacity: 50%;
+  transition: 0.3s background-color;
 }
 
-.gender-button:hover{
-    cursor: pointer;
-
+.gender-button:hover {
+  cursor: pointer;
 }
 
 .gender-text {
-    color: white;
-    margin: 5px;
-    letter-spacing: 1px;
-    font-family: 'Roboto', sans-serif;
+  color: white;
+  margin: 5px;
+  letter-spacing: 1px;
+  font-family: "Roboto", sans-serif;
 }
 
 .gender-button-submit {
-    font-size: 18px;
-    background-color: transparent;
-    border: transparent;
+  font-size: 18px;
+  background-color: transparent;
+  border: transparent;
 
-    color: green;
-    transition: .3s background-color
-
+  color: green;
+  transition: 0.3s background-color;
 }
 
-.gender-button-cancel{
-    font-size: 15px;
-    background-color: transparent;
-    border: transparent;
+.gender-button-cancel {
+  font-size: 15px;
+  background-color: transparent;
+  border: transparent;
 
-    color: red;
+  color: red;
 
-    transition: .3s background-color
+  transition: 0.3s background-color;
 }
 
 table {
-    border: 1px solid #ccc;
-    margin-bottom: 3%;
-    border-radius: 4px;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  border: 1px solid #ccc;
+  margin-bottom: 3%;
+  border-radius: 4px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
-
-input[type=file]::file-selector-button {
-    background-color:  #128fdc ;
-    color: #fff;
-    padding-bottom: 0.5rem;
-    padding-top: 0.5rem;
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
-       /*will fill up div when created */
-    cursor: pointer;
-    border-style: none;
-    border-radius: 0.20rem;
-    transition: background-color .2s;
-    border: none;
-    font-weight: bold;
-    margin-left: 5px;
+input[type="file"]::file-selector-button {
+  background-color: #128fdc;
+  color: #fff;
+  padding-bottom: 0.5rem;
+  padding-top: 0.5rem;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+  /*will fill up div when created */
+  cursor: pointer;
+  border-style: none;
+  border-radius: 0.2rem;
+  transition: background-color 0.2s;
+  border: none;
+  font-weight: bold;
+  margin-left: 5px;
 }
 
-
-#upload-button{
-    background-color:  #128fdc;
-    color: #fff;
-    width: 30px;
-    height: 30px;
-    padding: 0.5rem;
-    /*width: 150px;   will fill up div when created */
-    cursor: pointer;
-    border-style: none;
-    border-radius: 0.20rem;
-    transition: background-color .2s;
-
+#upload-button {
+  background-color: #128fdc;
+  color: #fff;
+  width: 30px;
+  height: 30px;
+  padding: 0.5rem;
+  cursor: pointer;
+  border-style: none;
+  border-radius: 0.2rem;
+  transition: background-color 0.2s;
 }
 
 #uploadProfPic {
-    width: auto;
-    border: none;
+  width: auto;
+  border: none;
+}
+
+.user-q-table{
+  width: 100%
 }
