--- a/react-app/src/components/NavBar.css
+++ b/react-app/src/components/NavBar.css
@@ -105,15 +105,26 @@
 
   .logout-button {
     background-color: transparent;
-    font-size: 16px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+    padding: 5px 2px 5px 2px;
+    min-width: 65px;
+    letter-spacing: .7px;
     border-radius: 5px;
-    border: 3px solid whitesmoke;
+    border: 2px solid rgb(183, 182, 182);
     width: 100px;
     margin-top: 2%;
     margin-bottom: 2%;
     color: whitesmoke;
     font-weight: bold;
     position: relative;
-    left: 10%;
+    left: 14%;
     cursor: pointer;
+    transition: .2s;
+  }
+
+  .logout-button:hover{
+    border: 2px solid whitesmoke;
+    background-color: whitesmoke;
+    color: #333;
   }
