--- a/react-app/src/context/MatchModal.css
+++ b/react-app/src/context/MatchModal.css
@@ -5,12 +5,18 @@
     left: 35%;
     display: flex;
     border-radius: 10px;
-    min-width: 400px;
-    min-height: 500px;
+    min-width: 300px;
+    min-height: 400px;
     width: 30%;
     height: 70%;
-    justify-content: center;
+    justify-content: space-between;
+    flex-direction: column;
     align-items: center;
     background-color: #fff;
     box-shadow: 3px 3px 10px 8px rgb(141, 140, 140);
+    padding: 200px 0px;
+  }
+
+  #matchMessage{
+    color: green;
   }
