--- a/react-app/src/components/auth/SignUpForm.css
+++ b/react-app/src/components/auth/SignUpForm.css
@@ -1,4 +1,4 @@
-.signupform {
+/* .signupform {
     width: 330px;
     background: rgb(255, 255, 255);
     border-radius: 1px;
@@ -61,4 +61,4 @@ input {
 #nextbutton:active {
   transform: translate(3px, 3px);
   box-shadow:none;
-}
+} */
