--- a/react-app/src/context/MatchModal.css
+++ b/react-app/src/context/MatchModal.css
@@ -5,16 +5,16 @@ body{
 #matchmodal {
     position: fixed;
     top: 15%;
-    left: 35%;
+    left: 34%;
     display: flex;
     border-radius: 10px;
-    width: 500px;
+    width: 550px;
     height: 500px;
     flex-direction: column;
     align-items: center;
     background-color: #fff;
     box-shadow: 3px 3px 10px 8px rgb(141, 140, 140);
-    padding: 80px;
+    padding: 70px;
   }
 
   #matchmodal-background {
@@ -41,6 +41,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-around;
+    width: 120%;
   }
 
   .match-title{
@@ -52,7 +53,7 @@ body{
     width: 60px;
     height: 60px;
     position: absolute;
-    left: 223px;
+    left: 245px;
   }
 
   .match-user1,.match-user2{
@@ -62,14 +63,15 @@ body{
     object-fit: cover;
     margin-top: 10%;
     margin-bottom: 10%;
+    border: 1px solid pink;
   }
 
   .match-user1{
-    margin-right: 2%;
+    margin-right: 3%;
   }
 
   .match-user2{
-    margin-left: 2%;
+    margin-left: 3%;
   }
 
   .matchmodal-p{
